--- a/python/fhe_example/Makefile
+++ b/python/fhe_example/Makefile
@@ -1,12 +1,12 @@
 .PHONY: all clean
 
-all: _demo_params_cffi.o
+all: _fhe_example_params_cffi.o
 
-_demo_params_cffi.o: demo_params.h ../_lazer_cffi.o
-	python3 ../params_cffi_build.py demo_params.h ../..
+_fhe_example_params_cffi.o: fhe_example_params.h ../_lazer_cffi.o
+	python3 ../params_cffi_build.py fhe_example_params.h ../..
 
-demo_params.h: demo_params.py
-	cd ../../scripts && sage lin-codegen.sage ../python/demo/demo_params.py > ../python/demo/demo_params.h
+fhe_example_params.h: fhe_example_params.py
+	cd ../../scripts && sage lin-codegen.sage ../python/fhe_example/fhe_example_params.py > ../python/fhe_example/fhe_example_params.h
 
 ../_lazer_cffi.o:
 	cd .. && make
